Refactor name shop in base.html and add title in index.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>
-        Главная страница
+        {% block title %}
+        {% endblock title %}
     </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,7 +39,7 @@
     <header class="header bg-white">
         <div class="container px-lg-3">
             <nav class="navbar navbar-expand-lg navbar-light py-3 px-lg-0"><a class="navbar-brand" href="/ru/"><span
-                    class="fw-bold text-uppercase text-dark">Финальный проект</span></a>
+                    class="fw-bold text-uppercase text-dark">lux shop</span></a>
                 <button class="navbar-toggler navbar-toggler-end" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
