Refactor path on static in _hero.html, add block main in index.html, refactor base.html

--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -3,3 +3,13 @@
 {% block title %}
 {{ title }}
 {% endblock title %}
+
+
+{% block main %}
+<main>
+    <!--  Modal -->
+    {% include 'components/_modal.html' %}
+    <!-- HERO SECTION-->
+    {% include 'components/_hero.html' %}
+</main>
+{% endblock main %}
