--- a/templates/base.html
+++ b/templates/base.html
@@ -18,13 +18,10 @@
 <div class="page-holder">
     <!-- navbar-->
     {% include 'components/_navbar.html' %}
+
     <!--  Main -->
-    <main>
-        <!--  Modal -->
-        {% include 'components/_modal.html' %}
-        <!-- HERO SECTION-->
-        {% include 'components/_hero.html' %}
-    </main>
+    {% block main %}
+    {% endblock main %}
 
     <!-- FOOTER SECTION-->
     {% include 'components/_footer.html' %}
