--- a/templates/components/_hero.html
+++ b/templates/components/_hero.html
@@ -1,6 +1,8 @@
+{% load static %}
+
 <div class="container">
     <section class="hero pb-3 bg-cover bg-center d-flex align-items-center"
-             style="background: url(/static/shop/img/hero-banner-alt.jpg)">
+             style="background: url({% static 'shop/img/hero-banner-alt.jpg' %})">
         <div class="container py-5">
             <div class="row px-4 px-lg-5">
                 <div class="col-lg-6">
