--- a/shop/templates/shop/components/_categories.html
+++ b/shop/templates/shop/components/_categories.html
@@ -7,7 +7,7 @@
         {% for category in categories %}
         <div class="col-md-4">
             <a class="category-item" href="/ru/category/chasy/">
-            <img class="img-fluid" src="/media/categories/product-5.jpg" alt="">
+            <img class="img-fluid" src="{{ category.get_parent_category_photo }}" alt="">
                 <strong class="category-item-title">{{ category }}</strong>
             </a>
         </div>
