--- a/shop/templates/shop/components/_categories.html
+++ b/shop/templates/shop/components/_categories.html
@@ -6,7 +6,7 @@
     <div class="row">
         {% for category in categories %}
         <div class="col-md-4">
-            <a class="category-item" href="/ru/category/chasy/">
+            <a class="category-item" href="{{ category.get_absolute_url }}">
             <img class="img-fluid" src="{{ category.get_parent_category_photo }}" alt="">
                 <strong class="category-item-title">{{ category }}</strong>
             </a>
