Added markup block main in category_page.html

--- a/shop/templates/shop/category_page.html
+++ b/shop/templates/shop/category_page.html
@@ -5,4 +5,290 @@
 {% endblock title %}
 
 {% block main %}
+<main>
+    <!--  Modal -->
+    <div class="modal fade" id="productView" tabindex="-1">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content overflow-hidden border-0">
+                <button class="btn-close p-4 position-absolute top-0 end-0 z-index-20 shadow-0" type="button"
+                        data-bs-dismiss="modal" aria-label="Close"></button>
+                <div class="modal-body p-0">
+                    <div class="row align-items-stretch">
+                        <div class="col-lg-6 p-lg-0"><a class="glightbox product-view d-block h-100 bg-cover bg-center"
+                                                        style="background: url(img/product-5.jpg)"
+                                                        href="img/product-5.jpg" data-gallery="gallery1"
+                                                        data-glightbox="Red digital smartwatch"></a><a
+                                class="glightbox d-none" href="img/product-5-alt-1.jpg" data-gallery="gallery1"
+                                data-glightbox="Red digital smartwatch"></a><a class="glightbox d-none"
+                                                                               href="img/product-5-alt-2.jpg"
+                                                                               data-gallery="gallery1"
+                                                                               data-glightbox="Red digital smartwatch"></a>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="p-4 my-md-4">
+                                <ul class="list-inline mb-2">
+                                    <li class="list-inline-item m-0"><i class="fas fa-star small text-warning"></i></li>
+                                    <li class="list-inline-item m-0 1"><i class="fas fa-star small text-warning"></i>
+                                    </li>
+                                    <li class="list-inline-item m-0 2"><i class="fas fa-star small text-warning"></i>
+                                    </li>
+                                    <li class="list-inline-item m-0 3"><i class="fas fa-star small text-warning"></i>
+                                    </li>
+                                    <li class="list-inline-item m-0 4"><i class="fas fa-star small text-warning"></i>
+                                    </li>
+                                </ul>
+                                <h2 class="h4">Red digital smartwatch</h2>
+                                <p class="text-muted">$250</p>
+                                <p class="text-sm mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut
+                                    ullamcorper leo, eget euismod orci. Cum sociis natoque penatibus et magnis dis
+                                    parturient montes nascetur ridiculus mus. Vestibulum ultricies aliquam
+                                    convallis.</p>
+                                <div class="row align-items-stretch mb-4 gx-0">
+                                    <div class="col-sm-7">
+                                        <div class="border d-flex align-items-center justify-content-between py-1 px-3">
+                                            <span class="small text-uppercase text-gray mr-4 no-select">Quantity</span>
+                                            <div class="quantity">
+                                                <button class="dec-btn p-0"><i class="fas fa-caret-left"></i></button>
+                                                <input class="form-control border-0 shadow-0 p-0" type="text" value="1">
+                                                <button class="inc-btn p-0"><i class="fas fa-caret-right"></i></button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-5"><a
+                                            class="btn btn-dark btn-sm w-100 h-100 d-flex align-items-center justify-content-center px-0"
+                                            href="cart.html">Add to cart</a></div>
+                                </div>
+                                <a class="btn btn-link text-dark text-decoration-none p-0" href="#!"><i
+                                        class="far fa-heart me-2"></i>Add to wish list</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <!-- HERO SECTION-->
+        <section class="py-5 bg-light">
+            <div class="container">
+                <div class="row px-4 px-lg-5 py-lg-4 align-items-center">
+                    <div class="col-lg-6">
+                        <h1 class="h2 text-uppercase mb-0">Часы</h1>
+                    </div>
+                    <div class="col-lg-6 text-lg-end">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb justify-content-lg-end mb-0 px-0 bg-light">
+                                <li class="breadcrumb-item"><a class="text-dark" href="/ru/">Главная</a></li>
+                                <li class="breadcrumb-item active" aria-current="page">Часы</li>
+                            </ol>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="py-5">
+            <div class="container p-0">
+                <div class="row">
+                    <!-- SHOP SIDEBAR-->
+                    <div class="col-lg-3 order-2 order-lg-1">
+                        <h5 class="text-uppercase mb-4">Фильтры</h5>
+                        <ul class="list-unstyled small text-muted ps-lg-4 font-weight-normal">
+
+
+                            <div class="py-2 px-4 bg-dark text-white mb-3">
+                                <strong class="small text-uppercase fw-bold">
+                                    подкатегории Часы
+                                </strong>
+                            </div>
+
+
+                            <li class="mb-2">
+                                <a class="reset-anchor" href="?type=smart-chasy">
+                                    Смарт часы
+                                </a>
+                            </li>
+
+                            <li class="mb-2">
+                                <a class="reset-anchor" href="?type=mehanicheskie">
+                                    Механические
+                                </a>
+                            </li>
+
+                            <li class="mb-2">
+                                <a class="reset-anchor" href="?type=nastennye">
+                                    настенные
+                                </a>
+                            </li>
+
+
+                            <div class="py-2 px-4 bg-dark text-white mb-3">
+                                <strong class="small text-uppercase fw-bold">
+                                    По цене
+                                </strong>
+                            </div>
+
+                            <li class="mb-2">
+                                <a class="reset-anchor" href="?sort=price">
+                                    По возрастанию цены
+                                </a>
+                            </li>
+
+                            <li class="mb-2">
+                                <a class="reset-anchor" href="?sort=-price">
+                                    По убыванию цены
+                                </a>
+                            </li>
+
+
+                            <div class="py-2 px-4 bg-dark text-white mb-3">
+                                <strong class="small text-uppercase fw-bold">
+                                    По цвету
+                                </strong>
+                            </div>
+
+                            <li class="mb-2">
+                                <a class="reset-anchor" href="?sort=color">
+                                    От А до Я
+                                </a>
+                            </li>
+
+                            <li class="mb-2">
+                                <a class="reset-anchor" href="?sort=-color">
+                                    От Я до А
+                                </a>
+                            </li>
+
+
+                            <div class="py-2 px-4 bg-dark text-white mb-3">
+                                <strong class="small text-uppercase fw-bold">
+                                    По размеру
+                                </strong>
+                            </div>
+
+                            <li class="mb-2">
+                                <a class="reset-anchor" href="?sort=size">
+                                    По возрастанию размера
+                                </a>
+                            </li>
+
+                            <li class="mb-2">
+                                <a class="reset-anchor" href="?sort=-size">
+                                    По убыванию размера
+                                </a>
+                            </li>
+
+
+                        </ul>
+
+                    </div>
+                    <!-- SHOP LISTING-->
+                    <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
+                        <div class="row mb-3 align-items-center">
+                            <div class="col-lg-6 mb-2 mb-lg-0">
+                                <p class="text-sm text-muted mb-0">Показано 2 товара из 10 товаров</p>
+                            </div>
+
+                        </div>
+                        <div class="row">
+                            <!-- PRODUCT-->
+
+
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="product text-center">
+                                    <div class="mb-3 position-relative">
+                                        <div class="badge text-white bg-"></div>
+                                        <a class="d-block" href="/ru/product/yyyy/"><img class="img-fluid w-100"
+                                                                                         src="https://www.raumplus.ru/upload/iblock/545/Skoro-zdes-budet-foto.jpg"
+                                                                                         alt="..."></a>
+                                        <div class="product-overlay">
+                                            <ul class="mb-0 list-inline">
+
+
+                                                <li class="list-inline-item m-0 p-0">
+                                                    <a class="btn btn-sm btn-outline-dark"
+                                                       href="/ru/add_favorite/yyyy/">
+                                                        <i class="far fa-heart"></i>
+                                                    </a>
+                                                </li>
+
+
+                                                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
+                                                                                        href="/ru/to_cart/21/add/">Добавить
+                                                    в корзину</a></li>
+                                                <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <h6><a class="reset-anchor" href="detail.html">ыыыы</a></h6>
+                                    <p class="small text-muted">$333,0</p>
+                                </div>
+                            </div>
+
+
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="product text-center">
+                                    <div class="mb-3 position-relative">
+                                        <div class="badge text-white bg-"></div>
+                                        <a class="d-block" href="/ru/product/naruchnye-chasy-orient-feu07005wx/"><img
+                                                class="img-fluid w-100" src="/media/products/Orient_FEU07005WX.jpg"
+                                                alt="..."></a>
+                                        <div class="product-overlay">
+                                            <ul class="mb-0 list-inline">
+
+
+                                                <li class="list-inline-item m-0 p-0">
+                                                    <a class="btn btn-sm btn-outline-dark"
+                                                       href="/ru/add_favorite/naruchnye-chasy-orient-feu07005wx/">
+                                                        <i class="far fa-heart"></i>
+                                                    </a>
+                                                </li>
+
+
+                                                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
+                                                                                        href="/ru/to_cart/7/add/">Добавить
+                                                    в корзину</a></li>
+                                                <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <h6><a class="reset-anchor" href="detail.html">Наручные часы Orient FEU07005WX</a>
+                                    </h6>
+                                    <p class="small text-muted">$1910,0</p>
+                                </div>
+                            </div>
+
+
+                        </div>
+                        <!-- PAGINATION-->
+                        <nav aria-label="Page navigation example">
+                            <ul class="pagination justify-content-center justify-content-lg-end">
+
+
+                                <li class="page-item mx-1 active"><a class="page-link" href="#!">1</a></li>
+
+
+                                <li class="page-item mx-1"><a class="page-link" href="?page=2">2</a></li>
+
+
+                                <li class="page-item mx-1"><a class="page-link" href="?page=3">3</a></li>
+
+
+                                <li class="page-item mx-1"><a class="page-link" href="?page=4">4</a></li>
+
+
+                                <li class="page-item mx-1"><a class="page-link" href="?page=5">5</a></li>
+
+
+                                <li class="page-item ms-1"><a class="page-link" href="?page=2" aria-label="Next"><span
+                                        aria-hidden="true">»</span></a></li>
+
+
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+</main>
 {% endblock main %}
