--- a/shop/templates/shop/category_page.html
+++ b/shop/templates/shop/category_page.html
@@ -133,33 +133,7 @@
                             <!-- PRODUCT-->
                             {% for product in products %}
                             <div class="col-lg-4 col-sm-6">
-                                <div class="product text-center">
-                                    <div class="mb-3 position-relative">
-                                        <div class="badge text-white bg-"></div>
-                                        <a class="d-block" href="/ru/product/yyyy/"><img class="img-fluid w-100"
-                                                                                         src="https://www.raumplus.ru/upload/iblock/545/Skoro-zdes-budet-foto.jpg"
-                                                                                         alt="..."></a>
-                                        <div class="product-overlay">
-                                            <ul class="mb-0 list-inline">
-
-
-                                                <li class="list-inline-item m-0 p-0">
-                                                    <a class="btn btn-sm btn-outline-dark"
-                                                       href="/ru/add_favorite/yyyy/">
-                                                        <i class="far fa-heart"></i>
-                                                    </a>
-                                                </li>
-
-                                                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
-                                                                                        href="/ru/to_cart/21/add/">Добавить
-                                                    в корзину</a></li>
-                                                <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <h6><a class="reset-anchor" href="detail.html">{{ product }}</a></h6>
-                                    <p class="small text-muted">${{ product.price }}</p>
-                                </div>
+                                {% include 'shop/components/_product_card.html' %}
                             </div>
                             {% endfor %}
                         </div>
