--- a/shop/templates/shop/components/_trending_products.html
+++ b/shop/templates/shop/components/_trending_products.html
@@ -4,161 +4,11 @@
         <h2 class="h5 text-uppercase mb-4">популярные товары</h2>
     </header>
     <div class="row">
+        {% for product in top_products %}
         <div class="col-lg-4 col-sm-6">
-            <div class="product text-center">
-                <div class="mb-3 position-relative">
-                    <div class="badge text-white bg-"></div>
-                    <a class="d-block" href="/ru/product/naruchnye-chasy-orient-ra-ac0f06l10b/"><img
-                            class="img-fluid w-100" src="/media/products/Orient_RA_AC0F06L10B.jpg"
-                            alt="..."></a>
-                    <div class="product-overlay">
-                        <ul class="mb-0 list-inline">
-                            <li class="list-inline-item m-0 p-0">
-                                <a class="btn btn-sm btn-outline-dark"
-                                   href="/ru/add_favorite/naruchnye-chasy-orient-ra-ac0f06l10b/">
-                                    <i class="far fa-heart"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
-                                                                    href="/ru/to_cart/6/add/">Добавить в
-                                корзину</a></li>
-                            <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
-                        </ul>
-                    </div>
-                </div>
-                <h6><a class="reset-anchor" href="detail.html">Наручные часы Orient RA-AC0F06L10B</a></h6>
-                <p class="small text-muted">$1800,0</p>
-            </div>
+        {% include 'shop/components/_product_card.html' %}
         </div>
-        <div class="col-lg-4 col-sm-6">
-            <div class="product text-center">
-                <div class="mb-3 position-relative">
-                    <div class="badge text-white bg-"></div>
-                    <a class="d-block" href="/ru/product/yyyy/"><img class="img-fluid w-100"
-                                                                     src="https://www.raumplus.ru/upload/iblock/545/Skoro-zdes-budet-foto.jpg"
-                                                                     alt="..."></a>
-                    <div class="product-overlay">
-                        <ul class="mb-0 list-inline">
-                            <li class="list-inline-item m-0 p-0">
-                                <a class="btn btn-sm btn-outline-dark" href="/ru/add_favorite/yyyy/">
-                                    <i class="far fa-heart"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
-                                                                    href="/ru/to_cart/21/add/">Добавить в
-                                корзину</a></li>
-                            <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
-                        </ul>
-                    </div>
-                </div>
-                <h6><a class="reset-anchor" href="detail.html">ыыыы</a></h6>
-                <p class="small text-muted">$333,0</p>
-            </div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-            <div class="product text-center">
-                <div class="mb-3 position-relative">
-                    <div class="badge text-white bg-"></div>
-                    <a class="d-block" href="/ru/product/nikon-z7ii-kit-nikkor-z-24-70mm-f4s/"><img
-                            class="img-fluid w-100" src="/media/products/nikon-z7-mark-ii-body-4.jpg"
-                            alt="..."></a>
-                    <div class="product-overlay">
-                        <ul class="mb-0 list-inline">
-                            <li class="list-inline-item m-0 p-0">
-                                <a class="btn btn-sm btn-outline-dark"
-                                   href="/ru/add_favorite/nikon-z7ii-kit-nikkor-z-24-70mm-f4s/">
-                                    <i class="far fa-heart"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
-                                                                    href="/ru/to_cart/12/add/">Добавить в
-                                корзину</a></li>
-                            <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
-                        </ul>
-                    </div>
-                </div>
-                <h6><a class="reset-anchor" href="detail.html">Nikon Z7II Kit Nikkor Z 24-70mm f/4S</a></h6>
-                <p class="small text-muted">$3800,0</p>
-            </div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-            <div class="product text-center">
-                <div class="mb-3 position-relative">
-                    <div class="badge text-white bg-"></div>
-                    <a class="d-block" href="/ru/product/canon-eos-4000d-18-55-iii-wifi/"><img
-                            class="img-fluid w-100"
-                            src="/media/products/01ab6f382c374fd85e3385435cdeb434.webp" alt="..."></a>
-                    <div class="product-overlay">
-                        <ul class="mb-0 list-inline">
-                            <li class="list-inline-item m-0 p-0">
-                                <a class="btn btn-sm btn-outline-dark"
-                                   href="/ru/add_favorite/canon-eos-4000d-18-55-iii-wifi/">
-                                    <i class="far fa-heart"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
-                                                                    href="/ru/to_cart/9/add/">Добавить в
-                                корзину</a></li>
-                            <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
-                        </ul>
-                    </div>
-                </div>
-                <h6><a class="reset-anchor" href="detail.html">Canon EOS 4000D 18-55 III WIFI</a></h6>
-                <p class="small text-muted">$620,0</p>
-            </div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-            <div class="product text-center">
-                <div class="mb-3 position-relative">
-                    <div class="badge text-white bg-"></div>
-                    <a class="d-block" href="/ru/product/nikon-d5300-18-140-kit/"><img
-                            class="img-fluid w-100"
-                            src="/media/products/nikon_dslr_d5300_silver_front--original.png" alt="..."></a>
-                    <div class="product-overlay">
-                        <ul class="mb-0 list-inline">
-                            <li class="list-inline-item m-0 p-0">
-                                <a class="btn btn-sm btn-outline-dark"
-                                   href="/ru/add_favorite/nikon-d5300-18-140-kit/">
-                                    <i class="far fa-heart"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
-                                                                    href="/ru/to_cart/14/add/">Добавить в
-                                корзину</a></li>
-                            <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
-                        </ul>
-                    </div>
-                </div>
-                <h6><a class="reset-anchor" href="detail.html">Nikon D5300 18-140 KIT</a></h6>
-                <p class="small text-muted">$700,0</p>
-            </div>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-            <div class="product text-center">
-                <div class="mb-3 position-relative">
-                    <div class="badge text-white bg-"></div>
-                    <a class="d-block" href="/ru/product/smart-chasy-apple-watch-series-8-45-mm-red/"><img
-                            class="img-fluid w-100" src="/media/products/APPLESERIES8SPORTBAND45MMRed.jpg"
-                            alt="..."></a>
-                    <div class="product-overlay">
-                        <ul class="mb-0 list-inline">
-                            <li class="list-inline-item m-0 p-0">
-                                <a class="btn btn-sm btn-outline-dark"
-                                   href="/ru/add_favorite/smart-chasy-apple-watch-series-8-45-mm-red/">
-                                    <i class="far fa-heart"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
-                                                                    href="/ru/to_cart/2/add/">Добавить в
-                                корзину</a></li>
-                            <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
-                        </ul>
-                    </div>
-                </div>
-                <h6><a class="reset-anchor" href="detail.html">Смарт часы Apple Watch Series 8 45 mm Red</a>
-                </h6>
-                <p class="small text-muted">$950,0</p>
-            </div>
-        </div>
+        {% endfor %}
     </div>
+
 </section>
