Add mapped filters subcategory

--- a/shop/templates/shop/components/_sort.html
+++ b/shop/templates/shop/components/_sort.html
@@ -1,32 +1,23 @@
+{% load shop_tags %}
+
+{% get_subcategories category as categories %}
+
 <div class="col-lg-3 order-2 order-lg-1">
     <h5 class="text-uppercase mb-4">Фильтры</h5>
     <ul class="list-unstyled small text-muted ps-lg-4 font-weight-normal">
-
-
         <div class="py-2 px-4 bg-dark text-white mb-3">
             <strong class="small text-uppercase fw-bold">
-                подкатегории Часы
+                подкатегории {{ category }}
             </strong>
         </div>
 
-
+        {% for category in categories %}
         <li class="mb-2">
             <a class="reset-anchor" href="?type=smart-chasy">
-                Смарт часы
+                {{ category }}
             </a>
         </li>
-
-        <li class="mb-2">
-            <a class="reset-anchor" href="?type=mehanicheskie">
-                Механические
-            </a>
-        </li>
-
-        <li class="mb-2">
-            <a class="reset-anchor" href="?type=nastennye">
-                настенные
-            </a>
-        </li>
+        {% endfor %}
 
 
         <div class="py-2 px-4 bg-dark text-white mb-3">
