Add sort in filters subcategory

--- a/shop/templates/shop/components/_sort.html
+++ b/shop/templates/shop/components/_sort.html
@@ -13,7 +13,7 @@
 
         {% for category in categories %}
         <li class="mb-2">
-            <a class="reset-anchor" href="?type=smart-chasy">
+            <a class="reset-anchor" href="?type={{ category.slug }}">
                 {{ category }}
             </a>
         </li>
