--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -9,7 +9,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <!-- Link--><a class="nav-link active" href="/ru/">Главная</a>
+                        <!-- Link--><a class="nav-link active" href="{% url 'index' %}">Главная</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" href=""
