--- a/shop/templates/shop/product_page.html
+++ b/shop/templates/shop/product_page.html
@@ -12,71 +12,10 @@
             <div class="row mb-5">
                 <div class="col-lg-6">
                     <!-- PRODUCT SLIDER-->
-                    <div class="row m-sm-0">
-                        <div class="col-sm-2 p-sm-0 order-2 order-sm-1 mt-2 mt-sm-0 px-xl-2">
-                            <div class="swiper product-slider-thumbs swiper-initialized swiper-pointer-events swiper-thumbs swiper-horizontal">
-                                <div class="swiper-wrapper" id="swiper-wrapper-7485f6cc78559adc" aria-live="polite"
-                                     style="transform: translate3d(0px, 0px, 0px);">
-
-                                    <div class="swiper-slide h-auto swiper-thumb-item mb-3 swiper-slide-visible swiper-slide-active swiper-slide-thumb-active"
-                                         role="group" aria-label="1 / 3" style="width: 65.6px; margin-right: 10px;"><img
-                                            class="w-100" src="/media/products/APPLESERIES8SPORTBAND45MMRed.jpg"
-                                            alt="..."></div>
-
-                                    <div class="swiper-slide h-auto swiper-thumb-item mb-3 swiper-slide-visible swiper-slide-next"
-                                         role="group" aria-label="2 / 3" style="width: 65.6px; margin-right: 10px;"><img
-                                            class="w-100" src="/media/products/0A2VK-YItQBgg5rhucBYZGJFIfQbkvre.jpg"
-                                            alt="..."></div>
-
-                                    <div class="swiper-slide h-auto swiper-thumb-item mb-3 swiper-slide-visible"
-                                         role="group" aria-label="3 / 3" style="width: 65.6px; margin-right: 10px;"><img
-                                            class="w-100" src="/media/products/LtauEKbRrgnjALVGB_5uQmYYL7PyT_Gh.jpg"
-                                            alt="..."></div>
-
-                                </div>
-                                <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
-                        </div>
-                        <div class="col-sm-10 order-1 order-sm-2">
-                            <div class="swiper product-slider swiper-initialized swiper-horizontal swiper-pointer-events">
-                                <div class="swiper-wrapper" id="swiper-wrapper-e2859d1454dcd66f" aria-live="polite"
-                                     style="transform: translate3d(0px, 0px, 0px);">
-
-                                    <div class="swiper-slide h-auto swiper-slide-active" role="group" aria-label="1 / 3"
-                                         style="width: 368px;"><a class="glightbox product-view"
-                                                                  href="/media/products/APPLESERIES8SPORTBAND45MMRed.jpg"
-                                                                  data-gallery="gallery2"
-                                                                  data-glightbox="Product item 1"><img class="img-fluid"
-                                                                                                       src="/media/products/APPLESERIES8SPORTBAND45MMRed.jpg"
-                                                                                                       alt="..."></a>
-                                    </div>
-
-                                    <div class="swiper-slide h-auto swiper-slide-next" role="group" aria-label="2 / 3"
-                                         style="width: 368px;"><a class="glightbox product-view"
-                                                                  href="/media/products/0A2VK-YItQBgg5rhucBYZGJFIfQbkvre.jpg"
-                                                                  data-gallery="gallery2"
-                                                                  data-glightbox="Product item 1"><img class="img-fluid"
-                                                                                                       src="/media/products/0A2VK-YItQBgg5rhucBYZGJFIfQbkvre.jpg"
-                                                                                                       alt="..."></a>
-                                    </div>
-
-                                    <div class="swiper-slide h-auto" role="group" aria-label="3 / 3"
-                                         style="width: 368px;"><a class="glightbox product-view"
-                                                                  href="/media/products/LtauEKbRrgnjALVGB_5uQmYYL7PyT_Gh.jpg"
-                                                                  data-gallery="gallery2"
-                                                                  data-glightbox="Product item 1"><img class="img-fluid"
-                                                                                                       src="/media/products/LtauEKbRrgnjALVGB_5uQmYYL7PyT_Gh.jpg"
-                                                                                                       alt="..."></a>
-                                    </div>
-
-                                </div>
-                                <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span></div>
-                        </div>
-                    </div>
-
+                    {% include 'shop/components/_product_slider.html' %}
                 </div>
+
                 <!-- PRODUCT DETAILS-->
-
-
                 <div class="col-lg-6">
                     <ul class="list-inline mb-2 text-sm">
                         <li class="list-inline-item m-0"><i class="fas fa-star small text-warning"></i></li>
