--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -29,7 +29,7 @@
                             class="far fa-heart me-1"></i><small class="text-gray fw-normal">
                         Избранные
                     </small></a></li>
-                    <li class="nav-item"><a class="nav-link" href="/ru/login_registration/"> <i
+                    <li class="nav-item"><a class="nav-link" href="{% url 'login_registration' %}"> <i
                             class="fas fa-user me-1 text-gray fw-normal"></i>Войти/Зарегистрироваться</a></li>
                 </ul>
             </div>
