--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -29,8 +29,17 @@
                             class="far fa-heart me-1"></i><small class="text-gray fw-normal">
                         Избранные
                     </small></a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'login_registration' %}"> <i
-                            class="fas fa-user me-1 text-gray fw-normal"></i>Войти/Зарегистрироваться</a></li>
+
+                    {% if request.user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'user_logout' %}">
+                        <i class="fas fa-user me-1 text-gray fw-normal"></i>Выйти</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'login_registration' %}">
+                        <i class="fas fa-user me-1 text-gray fw-normal"></i>Войти/Зарегистрироваться</a>
+                    </li>
+                    {% endif %}
+
                 </ul>
             </div>
         </nav>
