--- a/shop/templates/shop/components/_product_description_tabs.html
+++ b/shop/templates/shop/components/_product_description_tabs.html
@@ -34,11 +34,11 @@
                         <h6 class="mb-0 text-uppercase">{{ review.author.username }}</h6>
                         <p class="small text-muted mb-0 text-uppercase">{{ review.created_at }}</p>
                         <ul class="list-inline mb-1 text-xs">
+                            {% if review.grade %}
+                            {% for star in review.grade|get_positive_range %}
                             <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item m-0"><i class="fas fa-star-half-alt text-warning"></i></li>
+                            {% endfor %}
+                            {% endif %}
                         </ul>
                         <p class="text-sm mb-0 text-muted">{{ review.text }}</p>
                     </div>
@@ -57,11 +57,11 @@
                         <h6 class="mb-0 text-uppercase">{{ review.author.username }}</h6>
                         <p class="small text-muted mb-0 text-uppercase">{{ review.created_at }}</p>
                         <ul class="list-inline mb-1 text-xs">
+                            {% if review.grade %}
+                            {% for star in review.grade|get_positive_range %}
                             <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
-                            <li class="list-inline-item m-0"><i class="fas fa-star-half-alt text-warning"></i></li>
+                            {% endfor %}
+                            {% endif %}
                         </ul>
                         <p class="text-sm mb-0 text-muted">{{ review.text }}</p>
                     </div>
