--- a/shop/templates/shop/components/_product_description_tabs.html
+++ b/shop/templates/shop/components/_product_description_tabs.html
@@ -35,9 +35,15 @@
                         <p class="small text-muted mb-0 text-uppercase">{{ review.created_at }}</p>
                         <ul class="list-inline mb-1 text-xs">
                             {% if review.grade %}
+
                             {% for star in review.grade|get_positive_range %}
                             <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
                             {% endfor %}
+
+                            {% for star in review.grade|get_negative_range %}
+                            <li class="list-inline-item m-0"><i class="fas fa-star text-muted"></i></li>
+                            {% endfor %}
+
                             {% endif %}
                         </ul>
                         <p class="text-sm mb-0 text-muted">{{ review.text }}</p>
@@ -58,9 +64,15 @@
                         <p class="small text-muted mb-0 text-uppercase">{{ review.created_at }}</p>
                         <ul class="list-inline mb-1 text-xs">
                             {% if review.grade %}
+
                             {% for star in review.grade|get_positive_range %}
                             <li class="list-inline-item m-0"><i class="fas fa-star text-warning"></i></li>
                             {% endfor %}
+
+                            {% for star in review.grade|get_negative_range %}
+                            <li class="list-inline-item m-0"><i class="fas fa-star text-muted"></i></li>
+                            {% endfor %}
+
                             {% endif %}
                         </ul>
                         <p class="text-sm mb-0 text-muted">{{ review.text }}</p>
