The functionality of adding products to favorites on the main page has been implemented

--- a/shop/templates/shop/components/_product_card.html
+++ b/shop/templates/shop/components/_product_card.html
@@ -1,3 +1,6 @@
+{% load static %}
+{% load shop_tags %}
+
 <div class="product text-center">
     <div class="mb-3 position-relative">
         <div class="badge text-white bg-"></div>
@@ -6,15 +9,17 @@
         </a>
         <div class="product-overlay">
             <ul class="mb-0 list-inline">
-                <li class="list-inline-item m-0 p-0">
-                    <a class="btn btn-sm btn-outline-dark"
-                       href="/ru/add_favorite/yyyy/">
-                        <i class="far fa-heart"></i>
-                    </a>
-                </li>
-                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark"
-                                                        href="/ru/to_cart/21/add/">Добавить
-                    в корзину</a></li>
+                {% if request.user.is_authenticated %}
+                {% get_favorite_products request.user as fav_products %}
+                {% endif %}
+
+                {% if product in fav_products and request.user.is_authenticated %}
+                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark" href="{% url 'add_favorite' product.slug %}"><i class="fas far fa-heart" style="color:black"></i></a></li>
+                {% else %}
+                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-outline-dark" href="{% url 'add_favorite' product.slug %}"><i class="far fa-heart"></i></a></li>
+                {% endif %}
+
+                <li class="list-inline-item m-0 p-0"><a class="btn btn-sm btn-dark" href="/ru/to_cart/21/add/">Добавить в корзину</a></li>
                 <!--                    <li class="list-inline-item mr-0"><a class="btn btn-sm btn-outline-dark" href="#productView" data-bs-toggle="modal"><i class="fas fa-expand"></i></a></li>-->
             </ul>
         </div>
