A page of favorite products has been added. The product is removed from favorites by clicking on the hearts button.

--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -25,7 +25,7 @@
                             class="fas fa-dolly-flatbed me-1 text-gray"></i>Корзина
                         <small class="text-gray fw-normal">
                         </small></a></li>
-                    <li class="nav-item"><a class="nav-link" href="/ru/my_favorite/"> <i
+                    <li class="nav-item"><a class="nav-link" href="{% url 'favorite_product_page' %}"> <i
                             class="far fa-heart me-1"></i><small class="text-gray fw-normal">
                         Избранные
                     </small></a></li>
