--- a/shop/templates/shop/components/_product_detail.html
+++ b/shop/templates/shop/components/_product_detail.html
@@ -1,3 +1,6 @@
+{% load static %}
+{% load shop_tags %}
+
 <div class="col-lg-6">
     <ul class="list-inline mb-2 text-sm">
         <li class="list-inline-item m-0"><i class="fas fa-star small text-warning"></i></li>
@@ -15,11 +18,17 @@
                 href="/ru/to_cart/2/add/">Добавить в корзину</a></div>
     </div>
 
+    {% if request.user.is_authenticated %}
+    {% get_favorite_products request.user as fav_products %}
+    {% endif %}
 
-    <a class="text-dark p-0 mb-4 d-inline-block"
-       href="/ru/add_favorite/smart-chasy-apple-watch-series-8-45-mm-red/"><i
-            class="far fa-heart me-2"></i>Добавить в избранное</a><br>
-
+    {% if product in fav_products and request.user.is_authenticated %}
+    <a class="text-dark p-0 mb-4 d-inline-block" href="{% url 'add_favorite' product.slug %}">
+        <i class="fas far fa-heart me-2" style="color:black"></i>Удалить из избранного</a><br>
+    {% else %}
+    <a class="text-dark p-0 mb-4 d-inline-block" href="{% url 'add_favorite' product.slug %}">
+        <i class="far fa-heart me-2"></i>Добавить в избранное</a><br>
+    {% endif %}
 
     <ul class="list-unstyled small d-inline-block">
         <li class="px-3 py-2 mb-1 bg-white"><strong class="text-uppercase">В наличии:</strong><span
