--- a/shop/templates/shop/components/_newsletter.html
+++ b/shop/templates/shop/components/_newsletter.html
@@ -6,12 +6,11 @@
                 <p class="text-sm text-muted mb-0">Подпишись, и всегда будь в курсе акций или событий</p>
             </div>
             <div class="col-lg-6">
-                <form action="/ru/save_mail/" method="post">
-                    <input type="hidden" name="csrfmiddlewaretoken"
-                           value="CY0CjDPxPuQELcLqVKTcQV3yUCniHvhRf7TDHMWQSPKfvRRdpYNeytr5KeCWdUus">
+                <form action="{% url 'save_subscribers' %}" method="post">
+                    {% csrf_token %}
                     <div class="input-group">
                         <input name="email" class="form-control form-control-lg" type="email"
-                               placeholder="Enter your email address" aria-describedby="button-addon2">
+                               placeholder="Введите ваш почтовый адрес" aria-describedby="button-addon2">
                         <button class="btn btn-dark" type="submit">Подписаться</button>
                     </div>
                 </form>
