Added notifications for the user about successful mailbox registration or an error about an existing one. Refactor login_registration.html

--- a/shop/templates/shop/index.html
+++ b/shop/templates/shop/index.html
@@ -7,6 +7,7 @@
 
 {% block main %}
 <main>
+    {% include 'shop/components/_user_messages.html' %}
     <!--  Modal -->
     {% include 'components/_modal.html' %}
     <!-- HERO SECTION-->
