--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -21,7 +21,7 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/ru/cart/"> <i
+                    <li class="nav-item"><a class="nav-link" href="{% url 'cart' %}"> <i
                             class="fas fa-dolly-flatbed me-1 text-gray"></i>Корзина
                         <small class="text-gray fw-normal">
                         </small></a></li>
